--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="style.css">
     <title>Maloy Baroi | Portfolio</title>
 </head>
 <body>
@@ -374,7 +374,7 @@
     </div>
 </div>
 
-<script src="../js/main.js"></script>
+<script src="main.js"></script>
 <script>
     let resume_opener = document.getElementById('resume-opener');
     let resume_opener_btn = document.getElementById('resume-opener-btn');
