--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-class">
     <div class="container-fluid">
         <a class="navbar-brand" href="">
-            <img src="../Assets/images/my_image.png" alt="Logo Image">
+            <img src="my_image.png" alt="Logo Image">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img src="../Assets/images/Optimized-Maloy-removebg-preview.png" alt="Hero Image">
+            <img src="Optimized-Maloy-removebg-preview.png" alt="Hero Image">
         </div>
     </div>
 </div>
@@ -84,7 +84,7 @@
 <div class="container" id="id-about">
     <div class="row">
         <div class="col-md-6">
-            <img src="../Assets/images/HPD___00081125__01724738939-removebg-preview.png" alt="About me Image">
+            <img src="HPD___00081125__01724738939-removebg-preview.png" alt="About me Image">
         </div>
         <div class="col-md-6">
             <div class="row justify-content-start pb-3">
@@ -131,7 +131,7 @@
         <button id="resume-opener-btn" class="btn-success w-100">Click to Open Resume</button>
     </div>
     <div id="resume-container">
-        <iframe id="iframeId" src="../Assets/Resume/Maloy%20Baroi-DIIT(Under%20NU)-2017.pdf"
+        <iframe id="iframeId" src="Maloy%20Baroi-DIIT(Under%20NU)-2017.pdf"
                 frameborder="0"></iframe>
     </div>
 </div>
@@ -161,9 +161,9 @@
         </div>
         <div class="col-md-4 text-center d-flex ftco-animate fadeInUp ftco-animated">
             <a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-ideas"></i>
-							</span>
+		<span class="icon">
+			<i class="flaticon-ideas"></i>
+		</span>
                 <div class="desc">
                     <h3 class="mb-5">Web Developer</h3>
                 </div>
@@ -183,9 +183,9 @@
 
         <div class="col-md-4 text-center d-flex ftco-animate fadeInUp ftco-animated">
             <a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-analysis"></i>
-							</span>
+		<span class="icon">
+			<i class="flaticon-analysis"></i>
+		</span>
                 <div class="desc">
                     <h3 class="mb-5">App Development</h3>
                 </div>
@@ -193,9 +193,9 @@
         </div>
         <div class="col-md-4 text-center d-flex ftco-animate fadeInUp ftco-animated">
             <a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-ideas"></i>
-							</span>
+		<span class="icon">
+			<i class="flaticon-ideas"></i>
+		</span>
                 <div class="desc">
                     <h3 class="mb-5">Teaching</h3>
                 </div>
@@ -203,9 +203,9 @@
         </div>
         <div class="col-md-4 text-center d-flex ftco-animate fadeInUp ftco-animated">
             <a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-flasks"></i>
-							</span>
+		<span class="icon">
+			<i class="flaticon-flasks"></i>
+		</span>
                 <div class="desc">
                     <h3 class="mb-5">Commercial Branding</h3>
                 </div>
@@ -343,9 +343,9 @@
 
         <div class="col-md-4 text-center d-flex ftco-animate fadeInUp ftco-animated">
             <a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-analysis"></i>
-							</span>
+		<span class="icon">
+			<i class="flaticon-analysis"></i>
+		</span>
                 <div class="desc">
                     <h3 class="mb-5">App Development</h3>
                 </div>
@@ -353,9 +353,9 @@
         </div>
         <div class="col-md-4 text-center d-flex ftco-animate fadeInUp ftco-animated">
             <a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-ideas"></i>
-							</span>
+		<span class="icon">
+			<i class="flaticon-ideas"></i>
+		</span>
                 <div class="desc">
                     <h3 class="mb-5">Teaching</h3>
                 </div>
@@ -363,9 +363,9 @@
         </div>
         <div class="col-md-4 text-center d-flex ftco-animate fadeInUp ftco-animated">
             <a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-flasks"></i>
-							</span>
+		<span class="icon">
+			<i class="flaticon-flasks"></i>
+		</span>
                 <div class="desc">
                     <h3 class="mb-5">Commercial Branding</h3>
                 </div>
