--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="">
             <img src="my_image.png" alt="Logo Image">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <button style="color: #ffffff;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
