--- a/index.html
+++ b/index.html
@@ -393,12 +393,12 @@
     // HTML
     <form onSubmit="WriteToFile(this)" class="form-group">
     <label for="fullName">Full name:</label>
-    <input type="text" name="fullName" id="fullName" size="20" placeholder="Full Name">
-     
+    <input class="form-control" type="text" name="fullName" id="fullName" size="20" placeholder="Full Name">
+
     <label for="email">Email: </label>
-    <input type="text" name="email" id="email" size="20">
-     
-    <input type="submit" value="submit">
+    <input class="form-control" type="text" name="email" id="email" size="20">
+
+    <input type="submit" value="submit" class="btn btn-success">
     </form>
 </div>
 
