--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <button id="resume-opener-btn" class="btn-success w-100">Click to Open Resume</button>
     </div>
     <div id="resume-container">
-        <iframe id="iframeId" src="Maloy%20Baroi-DIIT(Under%20NU)-2017.pdf"
+        <iframe id="iframeId" src="Maloy Baroi (Software Engineer).pdf"
                 frameborder="0"></iframe>
     </div>
 </div>
