Changed Personal Data

--- a/index.html
+++ b/index.html
@@ -115,11 +115,21 @@
                         <li class="d-flex"><span>Full Name:</span> <span>Maloy Baroi</span></li>
                         <li class="d-flex"><span>Nickname:</span> <span>Maloy / Virat</span></li>
                         <li class="d-flex"><span>Date of birth:</span> <span>November 24, 1998</span></li>
-                        <li class="d-flex"><span>Address:</span> <span>Sukrabad, Dhaka</span></li>
-                        <li class="d-flex"><span>Zip code:</span> <span>1207</span></li>
-                        <li class="d-flex"><span>Email:</span> <span>maloy.virat@gmail.com</span></li>
-                        <li class="d-flex"><span>Phone: </span> <span>+880 1855 2792 09</span></li>
+                        <li class="d-flex"><span>Address:</span> <span>Middle Badda, Dhaka</span></li>
+                        <li class="d-flex"><span>Zip code:</span> <span>1212</span></li>
+                        <li class="d-flex"><span>Email:</span> <span>maloy.baroi.1998@gmail.com</span></li>
+                        <li class="d-flex"><span>Phone: </span> <span>+880 1303 8387 65</span></li>
                     </ul>
+                    <div>
+                        <b>
+                            <p>
+                                Career Objective
+                            </p>
+                        </b>
+                        <p>
+                            To profoundly influence and enrich the lives of millions by harnessing the transformative power of learning and development. Aspire to cultivate a culture of continuous growth, innovation, and excellence, empowering individuals to unlock their fullest potential. Dedicated to designing scalable, impactful educational solutions that drive societal progress and foster enduring change.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
