Structure changed in about me

--- a/index.html
+++ b/index.html
@@ -91,9 +91,17 @@
                 <div class="col-md-12 heading-section ftco-animate fadeInUp ftco-animated about-me">
                     <h2 class="mb-4 about-me-header">About <small>Me</small></h2>
                     <article class="my-thinking">
+                        <div>
+                            <b>
+                                <p>
+                                    Career Objective
+                                </p>
+                            </b>
+                            <p>
+                                To profoundly influence and enrich the lives of millions by harnessing the transformative power of learning and development. Aspire to cultivate a culture of continuous growth, innovation, and excellence, empowering individuals to unlock their fullest potential. Dedicated to designing scalable, impactful educational solutions that drive societal progress and foster enduring change.
+                            </p>
+                        </div>
                         <p>
-                            Never think you are not capable of doing anything because of you are not a talented person.
-                            If Quality is a function, <br>
                         <div class="quality-equation">
                             <h1>Q =</h1>
                             <h1>{</h1>
@@ -107,8 +115,9 @@
                                 // K = Knowledge, P = Practice, T = Talent
                             </small>
                         </div>
-                        <br>Talent is genetic,
-                        so we cannot change that but talent is less important than knowledge and practice.
+                        Never think you are not capable of doing anything because of you are not a talented person.
+                            If Quality is a function, <br>
+                        <br> — While talent may have a genetic basis and thus lie beyond our control, it is ultimately less significant than the knowledge we acquire and the effort we invest through consistent practice.
                         </p>
                     </article>
                     <ul class="about-info mt-4 px-md-0 px-2">
@@ -120,16 +129,6 @@
                         <li class="d-flex"><span>Email:</span> <span>maloy.baroi.1998@gmail.com</span></li>
                         <li class="d-flex"><span>Phone: </span> <span>+880 1303 8387 65</span></li>
                     </ul>
-                    <div>
-                        <b>
-                            <p>
-                                Career Objective
-                            </p>
-                        </b>
-                        <p>
-                            To profoundly influence and enrich the lives of millions by harnessing the transformative power of learning and development. Aspire to cultivate a culture of continuous growth, innovation, and excellence, empowering individuals to unlock their fullest potential. Dedicated to designing scalable, impactful educational solutions that drive societal progress and foster enduring change.
-                        </p>
-                    </div>
                 </div>
             </div>
         </div>
