Skill section changed

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="mt-2">
                 <p>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=maloy.baroi.1998@gmail.com&su=Hire%20Me%20Inquiry&body=Hello,%0D%0A%0D%0AI%20am%20interested%20in%20your%20services.%0D%0A%0D%0APlease%20contact%20me.%0D%0A%0D%0AThank%20you!" 
-                        class="btn btn-hire-me" 
+                        class="btn btn-hire-me py-3 px-4" 
                         target="_blank">
                             Hire me (Gmail)
                     </a>
@@ -227,7 +227,7 @@
 <div class="container mb-5" id="id-my-skills">
     <div class="row justify-content-center py-5 mt-5">
         <div class="col-md-12 heading-section text-center ftco-animate fadeInUp ftco-animated">
-            <h1 class="big big-2">Skills</h1>
+            <h1 class="big big-2">Technical Skills</h1>
             <p class="lets-talk">Learn From Me
                 <a href="https://www.fiverr.com/maloy_baroi/improve-your-learning-of-programming-languages-and-development"
                    target="_blank">
@@ -239,43 +239,76 @@
     <div class="row">
         <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
-                <h3>Django Web Framework</h3>
-                <div class="progress">
-                    <div class="progress-bar color-2" role="progressbar" aria-valuenow="85" aria-valuemin="0"
-                         aria-valuemax="100" style="width:85%">
-                        <span>80%</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
-                <h3>REACT Frontend Library</h3>
+                <h3>Python</h3>
                 <div class="progress">
                     <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                         aria-valuemax="100" style="width:60%">
-                        <span>60%</span>
+                         aria-valuemax="100" style="width:90%">
+                        <span>90%</span>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
-                <h3>HTML5</h3>
+                <h3>Django & Django REST Framework</h3>
                 <div class="progress">
-                    <div class="progress-bar color-3" role="progressbar" aria-valuenow="95" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 85%">
-                        <span>80%</span>
+                    <div class="progress-bar color-2" role="progressbar" aria-valuenow="88" aria-valuemin="0"
+                         aria-valuemax="100" style="width:88%">
+                        <span>88%</span>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
-                <h3>CSS3</h3>
+                <h3>JavaScript & TypeScript</h3>
                 <div class="progress">
-                    <div class="progress-bar color-4" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                         aria-valuemax="100" style="width:70%">
+                    <div class="progress-bar color-3" role="progressbar" aria-valuenow="82" aria-valuemin="0"
+                         aria-valuemax="100" style="width: 82%">
+                        <span>82%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
+                <h3>React.js & Next.js</h3>
+                <div class="progress">
+                    <div class="progress-bar color-4" role="progressbar" aria-valuenow="78" aria-valuemin="0"
+                         aria-valuemax="100" style="width:78%">
+                        <span>78%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
+                <h3>PostgreSQL & MongoDB</h3>
+                <div class="progress">
+                    <div class="progress-bar color-5" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                         aria-valuemax="100" style="width:85%">
+                        <span>85%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
+                <h3>FastAPI & Machine Learning</h3>
+                <div class="progress">
+                    <div class="progress-bar color-6" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                         aria-valuemax="100" style="width: 75%">
+                        <span>75%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
+                <h3>Docker & DevOps Tools</h3>
+                <div class="progress">
+                    <div class="progress-bar color-1" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                         aria-valuemax="100" style="width: 70%">
                         <span>70%</span>
                     </div>
                 </div>
@@ -283,22 +316,11 @@
         </div>
         <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
-                <h3>JavaScript</h3>
+                <h3>GoLang & R Programming</h3>
                 <div class="progress">
-                    <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                         aria-valuemax="100" style="width:65%">
+                    <div class="progress-bar color-2" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                         aria-valuemax="100" style="width: 65%">
                         <span>65%</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate fadeInUp ftco-animated">
-                <h3>Photography</h3>
-                <div class="progress">
-                    <div class="progress-bar color-5" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 90%">
-                        <span>90%</span>
                     </div>
                 </div>
             </div>
